# Prague-RealEstate-FullStack

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml
src/: main.py
src/ai/: build_kb.py  chatbot.py  db_search.py  knowledge_base.py
src/api/endpoints/: analytics.py  chatbot.py  marketplace.py  predictor.py
src/db/: __init__.py  database.py  models.py
src/parsers/: data_cleaning.py  parser.py
src/schemas/: listing.py
src/services/: my_classes.py  predicting.py  predictor.py  test_predictor.py
src/tasks/: monthly_update.py
src/templates/: analytics.html  chatbot.html  main.html  marketplace.html  predicting.html
